# PeterSQL

./: .gitignore  .pre-commit-config.yaml  CODE_STYLE.md  CONTRIBUTING.md  ENGINES.md  PROJECT_STATUS.md  PeterSQL.fbp  README.md  ROADMAP.md  VERSIONING_POLICY.md  babel.cfg  constants.py  demo.db  locales.py  main.py  pyproject.toml  requirements.txt  settings.py  settings.yml  settings.yml.bak  test.db  test_connections_manual.py
.github/workflows/: ci.yml
assets/: database_options_matrix.md  trigger_options_matrix.md  view_options_matrix.md
engines/: session.py
engines/structures/: __init__.py  context.py  database.py  datatype.py  indextype.py
helpers/: __init__.py  bindings.py  dataview.py  encoder.py  exceptions.py  lazylist.py  loader.py  logger.py  observables.py  repository.py  settings.py  sql.py
icons/: __init__.py  png_to_ico.py
locale/: petersql.pot
locales/: messages.pot
models/: database.py  session.py
models/structures/: __init__.py  charset.py  database.py  datatype.py  indextype.py  statement.py
scripts/: locales.py  runtest-local.sh  runtest.py  runtest.sh  update_badges.sh
scripts/locale/: petersql.pot
structures/: configurations.py  connection.py  helpers.py  secrets.py  session.py  ssh_tunnel.py
structures/engines/: __init__.py  builder.py  context.py  database.py  datatype.py  dump.py  indextype.py  specification.yaml
tests/: README.md  __init__.py  conftest.py  test_column_controller.py  test_configurations.py  test_connections.py  test_datatypes.py  test_engines_init.py  test_locales.py  test_logger.py  test_mariadb_column.py  test_mariadb_table.py  test_mysql_column.py  test_observables.py  test_session.py  test_sqlite.py  test_sqlite_column.py  test_sqlite_context.py  test_sqlite_foreignkey.py  test_sqlite_index.py  test_sqlite_record.py  test_sqlite_trigger.py  test_sqlite_view.py
tests/autocomplete/: README.md  RULES.md  autocomplete_adapter.py  test_autocomplete_basic.py  test_config.json  test_golden_cases.py
tests/core/: test_builder.py  test_column_controller.py  test_configurations.py  test_connection.py  test_connections_repository.py  test_datatype.py  test_engines_init.py  test_indextype.py  test_loader.py  test_observables.py  test_session.py  test_sql_structures.py  test_ssh_tunnel_contract.py  test_view_editor.py
tests/engines/: base_check_tests.py  base_column_tests.py  base_database_tests.py  base_foreignkey_tests.py  base_function_tests.py  base_index_tests.py  base_procedure_tests.py  base_readonly_tests.py  base_record_tests.py  base_ssh_tests.py  base_table_tests.py  base_trigger_tests.py  base_view_tests.py  test_connection_lost.py
tests/ui/: README.md  scenario_helpers.py  test_bindings.py  test_dataview.py  (+11 more)
themes/: README.md
windows/: __init__.py  custom_components.py  explorer.bkp.py  session_manager.py  splash.py  state.py  views.py
(+232 files in other folders)
