[project]
name = "petersql"
version = "0.1.0"
description = "graphical client for database management"
requires-python = ">=3.14"
dependencies = [
    "babel",
    "oracledb",
    "psutil",
    "psycopg2-binary",
    "pymysql",
    "pyyaml",
    "requests",
    "sqlglot",
    "wxpython",
]

[project.optional-dependencies]
dev = [
    "mypy",
    "pre-commit",
    "pytest",
    "pytest-cov",
    "pytest-mock",
    "types-pymysql",
    "types-pyyaml",
    "types-wxpython",
    "testcontainers"
]


[tool.pytest.ini_options]
markers = [
    "integration: marks tests as integration tests (testcontainers, slow, deselect with '-m \"not integration\"')",
]
addopts = "-m 'not integration'"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
cache_dir = ".cache/pytest"

[tool.pyright]
typeCheckingMode = "standard"
reportMissingImports = "none"
reportMissingModuleSource = "none"
